# tauri-plugin-holochain

./: .gitignore  404.html  Cargo.toml  README.md  flake.nix  hashmap.json  index.html  package.json  pnpm-lock.yaml
.changes/: config.json
.github/workflows/: build-and-deploy-site.yaml  build-hc-pilot.yaml  build-scaffold-holochain-runtime.yaml  build-scaffold-tauri-happ.yaml  cache-devshells.yaml  sync-current-main-with-main.yml  test.yml
assets/: app.CSdN4Iuw.js  app.CYIWbH5R.js  app.Cln0HWeg.js  app.LY_Z8Lwf.js  documentation_android_developing.md.6CIvR8QJ.js  documentation_android_developing.md.8OtSoBe9.js  documentation_android_developing.md.8OtSoBe9.lean.js  documentation_android_developing.md.B34Rzl6j.js  documentation_android_developing.md.B3tlqEWZ.js  documentation_android_developing.md.B8CCZeES.js  documentation_android_developing.md.BCsmqqcm.js  documentation_android_developing.md.BFPtEVYd.js  documentation_android_developing.md.BIWdIdAR.js  documentation_android_developing.md.BJ0n2n08.js  documentation_android_developing.md.BMpta89S.js  documentation_android_developing.md.BO1xNP90.js  documentation_android_developing.md.BQnPC2gv.js  documentation_android_developing.md.BUzhZSTW.js  documentation_android_developing.md.BVOu3xKJ.js  documentation_android_developing.md.BVqO1GyV.js  documentation_android_developing.md.BbPnx3QL.js  documentation_android_developing.md.BbPnx3QL.lean.js  documentation_android_developing.md.BfpHR-Pt.js  documentation_android_developing.md.BgzMup-B.js  documentation_android_developing.md.BgzMup-B.lean.js  documentation_android_developing.md.BiOnegdY.js  documentation_android_developing.md.Bj2PpPW1.js  documentation_android_developing.md.Bk9b-tws.js  documentation_android_developing.md.BkoPGDmh.js  documentation_android_developing.md.Bt-6H4HU.js  documentation_android_developing.md.BuYLJVNS.js  documentation_android_developing.md.BvYSbk1W.js  documentation_android_developing.md.BxlctxyM.js  documentation_android_developing.md.C-VSZSwI.js  documentation_android_developing.md.C1nkVW-Q.js  documentation_android_developing.md.C4e8ciSD.js  documentation_android_developing.md.C50n9NwD.js  documentation_android_developing.md.C50n9NwD.lean.js  documentation_android_developing.md.C5IdUzdN.js  documentation_android_developing.md.C5IdUzdN.lean.js  (+635 more)
assets/chunks/: framework.CFl82zc9.js  framework.Db66KkTQ.js  theme.B8nipTBZ.js  theme.CcKV7eAF.js  theme.DEdQw22A.js  theme.PRLsac31.js
crates/hc-pilot/: Cargo.toml  default.nix
crates/hc-pilot/src/: main.rs
crates/holochain_runtime/: Cargo.toml
crates/holochain_runtime/src/: config.rs  error.rs  filesystem.rs  holochain_runtime.rs  launch.rs  lib.rs
crates/holochain_runtime/src/happs/: install.rs  migrate.rs  mod.rs  update.rs  versioned_happ.rs
crates/holochain_runtime/src/launch/: config.rs  keystore.rs  mdns.rs
crates/scaffold-holochain-runtime/: Cargo.toml  default.nix  run_test.sh
crates/scaffold-holochain-runtime/templates/holochain-runtime/: flake.nix.hbs  package.json.hbs  vite.config.ts.hbs
crates/scaffold-holochain-runtime/templates/holochain-runtime/.github/workflows/: release-tauri-app.yaml.hbs
crates/scaffold-holochain-runtime/templates/holochain-runtime/src-tauri/: Cargo.toml.hbs
crates/scaffold-holochain-runtime/templates/holochain-runtime/src-tauri/src/: lib.rs.hbs
crates/scaffold-tauri-happ/: Cargo.toml  default.nix  run_test.sh
crates/scaffold-tauri-happ/src/: lib.rs
crates/scaffold-tauri-happ/templates/end-user-happ/: Cargo.toml.hbs
crates/scaffold-tauri-happ/templates/end-user-happ/.github/workflows/: release-tauri-app.yaml.hbs
crates/scaffold-tauri-happ/templates/end-user-happ/src-tauri/: Cargo.toml.hbs  tauri.conf.json.hbs
crates/scaffold-tauri-happ/templates/end-user-happ/src-tauri/src/: lib.rs.hbs
crates/scaffold-tauri-happ/templates/end-user-happ/ui/: vite.config.ts.hbs
crates/tauri-plugin-holochain/: Cargo.toml  watermark.js
crates/tauri-plugin-holochain/permissions/autogenerated/: reference.md
crates/tauri-plugin-holochain/permissions/schemas/: schema.json
crates/tauri-plugin-holochain/src/: config.rs  error.rs  lib.rs  plugin_builder.rs  window_builder.rs
crates/tauri-plugin-holochain/src/commands/: install.rs  mod.rs
docs/: index.md
docs/.vitepress/: config.mts
docs/documentation/: how-to-create-a-holochain-runtime.md  how-to-create-an-end-user-happ.md  troubleshooting.md
docs/documentation/android/: project-setup.md
documentation/: faqs.html  getting-to-know-tauri.html  how-to-create-a-holochain-runtime.html  how-to-create-an-end-user-happ.html  troubleshooting.html
documentation/android/: developing.html  device-setup.html  project-setup.html  shipping.html
documentation/desktop/: shipping.html
examples/end-user-happ/: .gitignore  Cargo.toml  flake.nix  mprocs.yaml  package-lock.json  package.json  vite.config.js
examples/end-user-happ/dnas/forum/workdir/: dna.yaml
examples/end-user-happ/dnas/forum/zomes/coordinator/posts/src/: lib.rs  post.rs
examples/end-user-happ/dnas/forum/zomes/integrity/posts/src/: lib.rs
examples/end-user-happ/src-tauri/: Cargo.toml
examples/end-user-happ/src-tauri/src/: lib.rs
examples/end-user-happ/tests/: package.json
examples/end-user-happ/ui/: package.json  vite.config.ts
examples/end-user-happ/ui/src/: holochain-app.ts
examples/end-user-happ/ui/src/forum/posts/: all-posts.ts  create-post.ts
examples/holochain-runtime/: flake.nix  package.json
examples/holochain-runtime/src-tauri/: Cargo.toml
examples/holochain-runtime/src-tauri/src/: lib.rs
license/: license.html
nix/: android.nix  custom-go-compiler.nix  tauri-cli.nix
nix/modules/: custom-go-compiler.nix
