[package]
name = "holochain_runtime"
version = "0.1.0"
edition = "2021"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
holochain = { version = "0.4.1-rc.1", features = [ "unstable-functions", "unstable-sharding" ] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
holochain = { version = "0.4.1-rc.1", default-features = false, features = [
  "sqlite-encrypted",
  "tx5",
  "unstable-functions",
  "unstable-sharding",
  "wasmer_wamr"
] }

[dependencies]
# Holochain dependencies
mr_bundle = "0.4.0"
holochain_types = "0.4.1-rc.1"
holochain_keystore = "0.4.1-rc.1"
holochain_conductor_api = "0.4.1-rc.1"

kitsune_p2p_mdns = "0.4.0"
kitsune_p2p_types = "0.4.0"

sbd-server = "0.0.8-alpha"
tx5-signal = "0.1.5-beta"

# Lair dependencies
hc_seed_bundle = "0.2"
lair_keystore_api = "0.5.3"
lair_keystore = { version = "0.5.3" }

# Holochain client
holochain_client = { git = "https://github.com/holochain/holochain-client-rust", branch = "v0.4.1-rc.1"}

# Other dependencies
arbitrary = "=1.3.2"
derive_arbitrary = "=1.3.2"
url2 = "0.0.6"
thiserror = "1.0"
one_err = "0"
serde = "1.0.193"
portpicker = "0.1"
log = "0.4"
async-std = "1.12"
local-ip-address = "0.6"
async-trait = "0.1"
sha256 = "1"
zip = { version = "0.6" }
serde_json = "1"
base64 = "0.22"
tokio = "1"
anyhow = "1"
