[package]
name = "tauri-plugin-holochain"
version = "0.0.0"
authors = ["guillem@darksoil.studio"]
description = ""
edition = "2021"
rust-version = "1.75"
links = "tauri-plugin-holochain"

[dependencies]
tauri = { version = "2.1.1" }

# Holochain dependencies
holochain_types = { version = "0.5", default-features = false }

# Lair dependencies
hc_seed_bundle = "0.3"
lair_keystore_api = "0.6.0"

# Holochain client
holochain_client = { version = "0.7", default-features = false }

holochain_runtime = { path = "../holochain_runtime", default-features = false }

rustls = "0.23"
log = "0.4"
symlink = "0.1.0"
nanoid = "0.4.0"
serde = "1.0.193"
thiserror = "1.0"
url = "2.4.0"
url2 = "0.0.6"
bzip2 = { version = "0.4", features = ["static"] }
mime_guess = "2.0.4"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tls-listener = "0.8"
futures = "0.3"
either = "*"
anyhow = "1"
ctrlc = "3.4"

[build-dependencies]
tauri-plugin = { version = "2.0.0", features = ["build"] }

[features]
default = ["sqlite-encrypted"]
sqlite = ["holochain_runtime/sqlite"]
sqlite-encrypted = ["holochain_runtime/sqlite-encrypted"]
