[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
resolver = "2"
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*", "src-tauri"]

[workspace.dependencies]
hdi = "0.6.0"
hdk = "0.5.0"
serde = "1.0"
holochain_serialized_bytes = "*"

[workspace.dependencies.posts]
path = "dnas/forum/zomes/coordinator/posts"

[workspace.dependencies.posts_integrity]
path = "dnas/forum/zomes/integrity/posts"

[patch.crates-io]
wasmer = { git = "https://github.com/guillemcordoba/wasmer", branch = "fix-mobile" }
wasmer-vm = { git = "https://github.com/guillemcordoba/wasmer", branch = "fix-mobile" }
wasmer-types = { git = "https://github.com/guillemcordoba/wasmer", branch = "fix-mobile" }
# kitsune2 = { path  ="/home/guillem/projects/holochain/core/kitsune2-fork/kitsune2/crates/kitsune2"}
# kitsune2_api = { path  ="/home/guillem/projects/holochain/core/kitsune2-fork/kitsune2/crates/api"}
# kitsune2_core = { path  ="/home/guillem/projects/holochain/core/kitsune2-fork/kitsune2/crates/core"}
# kitsune2_dht = { path  ="/home/guillem/projects/holochain/core/kitsune2-fork/kitsune2/crates/dht"}
# kitsune2_gossip = { path  ="/home/guillem/projects/holochain/core/kitsune2-fork/kitsune2/crates/gossip"}
# kitsune2_bootstrap_client = { path  ="/home/guillem/projects/holochain/core/kitsune2-fork/kitsune2/crates/bootstrap_client"}
 
kitsune2 = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_api = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_core = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_dht = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_gossip = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_bootstrap_client = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
